@@ -116,6 +116,7 @@
     "pretty_setmargin"
     "prf"
     "primrec"
+    "print_ML_antiquotations"
     "print_abbrevs"
     "print_antiquotations"
     "print_ast_translation"
@@ -285,6 +286,7 @@
     "locale_deps"
     "pr"
     "prf"
+    "print_ML_antiquotations"
     "print_abbrevs"
     "print_antiquotations"
     "print_attributes"
