@@ -170,6 +170,7 @@
     "primcorec"
     "primcorecursive"
     "primrec"
+    "print_ML_antiquotations"
     "print_abbrevs"
     "print_antiquotations"
     "print_ast_translation"
@@ -400,6 +401,7 @@
     "nitpick"
     "pr"
     "prf"
+    "print_ML_antiquotations"
     "print_abbrevs"
     "print_antiquotations"
     "print_attributes"
